# cgs-hackathon

./: .env.local.example  .gitignore  CLAUDE.md  README.md  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
app/: boot-effects.tsx  globals.css  layout.tsx  page.tsx
app/(main)/: layout.tsx
app/preflight/: page.tsx
cgs-ui-design/: README.md
cgs-ui-design/project/: CGS Design Spec-print.html  CGS Design Spec.html  app.jsx  audit.html  design-canvas.jsx  fixtures.js  print-app.jsx  styles.css
docs/: architecture.md  cgs-prd-v2.md  impl-plan.md  recall-stream-grammar.md  tech-design.md
docs/phase-plans/: phase-0-plan.md  phase-1-plan.md  phase-2a-plan.md  phase-2b-plan.md  phase-2c-plan.md  phase-2d-plan.md  phase-3-plan.md  phase-4-plan.md
e2e/: phase-1.spec.ts  phase-2a.spec.ts
fixtures/: offline_cache.json  offline_cache.schema.json  override_cache.schema.json  precedents.json  precedents.schema.json  scripted_queries.json  scripted_queries.schema.json
lib/: events.ts  shortcuts.ts  store.ts  window.ts
lib/components/: Sidebar.tsx  (+7 more)
scripts/: check-fixture-mtimes.ts  gen-diagnostic-fixtures.ts  gen-offline-cache.ts  gen-override-cache.ts  gen-precedent-embeddings.ts  gen-scripted-query-embeddings.ts  launch.mjs  test-phase-0.js  test-phase-1.js  test-phase-2a.js  test-phase-2b.js  test-phase-2c.js  test-phase-2d.js  test-phase-3.js  test-phase-4.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  recall.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+179 files in other folders)
