[package]
name = "cgs-advisors-demo"
version = "0.1.0"
description = "CGS Advisors agentic AI demo — Tauri shell"
authors = ["CGS Advisors"]
edition = "2021"

[lib]
name = "cgs_advisors_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
